<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_add_server"
        android:title="@string/add_server"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:onClick="addServer"/>

    <item android:id="@+id/action_edit_servers"
        android:title="@string/action_edit_servers"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="60"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_status"
        android:title="@string/action_status"
        android:onClick="launchStatus"
        android:orderInCategory="70"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>